ansible/k8s_files/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  spring-deployment
  namespace: default
  labels:
    app: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name:  spring
        image:  ghcr.io/giannicapocci/spring-otel:latest
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 9090
          failureThreshold: 20
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
            httpGet:
              path: "/actuator/health/readiness"
              port: 9090
            failureThreshold: 10
            periodSeconds: 10
            initialDelaySeconds: 30
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort:  9090
          name:  spring
        volumeMounts:
            - mountPath: /app/src/main/resources/static/uploads
              name: spring-pvc
      imagePullSecrets:
      # - name: registry-credentials
        - name: dockerhub-secret
      volumes:
        - name: spring-pvc
          persistentVolumeClaim:
            claimName: spring-pvc
