ansible/k8s_files/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: mysql
  name: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
