ansible/k8s_files/otel-collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: default
spec:
  type: NodePort
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      nodePort: 30317
    - name: otlp-http
      port: 4318
      targetPort: 4318
      nodePort: 30318
    - name: prometheus-metrics
      port: 8889
      targetPort: 8889
      nodePort: 30889
