ansible/k8s_files/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: spring-ingress
spec:
  rules:
  - host: spring.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: spring
            port:
              name: spring
